--- a/ESTUDO_JS/index.html
+++ b/ESTUDO_JS/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funções</title>
+    <title>objetos</title>
 </head>
 <body>
     <script src="/ESTUDO_JS/script2.js"></script>
+    <script src="/ESTUDO_JS/objetos.js"></script>
+    <script src="/ESTUDO_JS/objeto2.js"></script>
+
 </body>
 </html>
